--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@styled-icons/material-outlined": "^10.28.0",
     "next": "^10.0.9",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
