--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "export": "next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -s ./public",
     "test": "jest",
     "deploy-static": "npm run build && npm run export",
     "lint": "eslint src --max-warnings=0",
