--- a/package.json
+++ b/package.json
@@ -13,30 +13,31 @@
     "deploy-static": "npm run build && npm run export",
     "lint": "eslint src --max-warnings=0",
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate": "npx plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
-    "next": "^11.0.1",
+    "next": "^11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/react": "^6.3.4",
+    "@babel/core": "^7.15.0",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@types/node": "^16.3.1",
-    "@types/react": "^17.0.14",
-    "@types/styled-components": "^5.1.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@types/node": "^16.6.1",
+    "@types/react": "^17.0.18",
+    "@types/styled-components": "^5.1.12",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
@@ -44,7 +45,8 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "jest-styled-components": "^7.0.5",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^11.1.2",
+    "plop": "^2.7.4",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
